# rpg-roleplay-platform

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  README.zh-CN.md
rpg/: .env.example  .gitignore  app.py  chapter_fact_indexer.py  chapter_splitter.py  character_card_generator.py  chat_pipeline.py  conftest.py  demo.py  game_policy.py  mcp_broker.py  model_probe.py  model_registry.py  pyproject.toml  redis_bus.py  requirements.txt  retrieval.py  save_phase_manager.py  script_timeline.py  skill_executor.py  state_event_bus.py  state_op_tool_map.py  state_repository.py  state_write_context.py  timeline_index.py  timeline_state.py  ui_manifest.py
rpg/agents/: __init__.py  _harness.py  acceptance_verifier.py  anchor_seed_agent.py  black_swan_agent.py  command_agent.py  context_agent.py  extractor.py  phase_digest_agent.py  provider_errors.py  recorder.py  save_history.py  timeline_narrative_guard.py  worldbook_agent.py
rpg/bench/: README.md  cases.py  harness.py  metrics.py  replay.py  run_replay.py  writing.py
rpg/config/: glossary.py  mcp_servers.json  model_catalog.json  novel_glossary.example.json
rpg/console_assistant/: __init__.py  _state.py  confirmation.py  conversations.py  editor_context.py  llm_loop.py  prompts.py  streaming.py  tools.py
rpg/context_engine/: __init__.py  _constants.py  _utils.py  core.py  formatters.py  helpers.py  layers.py  loaders.py  rules_text.py
rpg/context_providers/: __init__.py  base.py  memory.py  module.py  novel.py  recent_chat.py  registry.py  rules.py  runtime_phase_digests.py  script_phase_anticipation.py  tavern.py  worldline.py
rpg/core/: __init__.py  config.py  feature_flags.py  llm_backend.py  logging.py  outbound.py  request_cache.py  security.py  startup.py  version.py  vertex_sa.py
rpg/cron/: __init__.py  hard_delete.py  policy_notice.py  prune_audit.py  prune_feedback.py
rpg/docs/: openapi.json
rpg/extract/: __init__.py  arc_pipeline.py  budget.py  dedup.py  embed.py  incremental.py  job_runner.py  llm.py  per_chapter.py  pipeline.py  progress.py  rebuild.py  resolve.py  seed.py
rpg/gm_serving/: __init__.py  anchor_reconcile.py  context_inject.py  impact.py  serve.py  settings.py  steering.py
rpg/ingest/: __init__.py  adaptive_split.py  filters.py  sanitize.py
rpg/kb/: __init__.py  canon_repo.py  episodic.py  live_repo.py  reveal.py  save_kb.py  view.py
rpg/modules/: __init__.py
rpg/platform_app/: __init__.py  assets_registry.py  auth.py  cluster.py  dmca.py  email.py  federation.py  frontend_routes.py  image_jobs.py  import_pipeline.py  library.py  migrate.py  moderation.py  perms.py  persona_skills.py  policy_notice.py  postproc_queue.py  privacy.py  runtime.py  save_bundle.py  save_io.py  script_import.py  security.py  settings.py  storage.py  tavern_cards.py  tavern_chats.py  turnstile.py  usage.py  user_cards.py  user_credentials.py  workspace.py
rpg/routes/: __init__.py  _deps.py  _deps_fastapi.py  console_assistant.py  core.py  game.py  mcp.py  memory.py  models.py  permissions.py  persona_skills.py  rules.py  sidebar.py  skills.py  tavern.py  timeline.py  worldline.py
rpg/rules/: __init__.py  base.py  dice.py  engine.py
rpg/rules_bridge/: __init__.py  checks.py  combat.py  consume.py  entity_sync.py  intent.py  module_ops.py  suggest.py
rpg/schemas/: __init__.py  _common.py  console_assistant.py  core.py  game.py  mcp.py  memory.py  models.py  permissions.py  rules.py  sidebar.py  skills.py  timeline.py  worldline.py
rpg/scripts/: __init__.py  aggregate_phase_digests.py  backfill_token_usage_scenario.py  bulk_backfill_phase_digests.py  e2e_long_game_test.py  gen_openapi.py  ingest_novel_facts_chunks.py  ingest_novel_to_script.py  llm_e2e_test.py  phase_digest_worker.py  run_cron.py  run_postproc_worker.py
rpg/state/: __init__.py  core.py  extractors.py  json_ops.py  labels.py  parsers.py  path_ops.py  permissions.py  time_ops.py  utils.py
rpg/tests/: helpers.py  test_account_lifecycle.py  test_credentials_api.py  test_embed_recall_consistency.py  test_embedding_byok.py  test_feedback.py  test_feedback_moderation.py  test_gm_model_resolution.py  test_kb_facts_dedup.py  test_password_reset.py  test_persist_divergence_keeps_edits.py  test_pipeline_deforking_batch1.py  test_pipeline_deforking_batch5.py  test_pipeline_deforking_batch7.py  test_player_notes_false_delete.py  test_postproc_queue.py  test_register_consent.py  test_register_full.py  test_request_cache.py  test_script_import_api.py  test_security_headers.py  test_session_model_persist.py  test_splash.py  test_tavern_cards_completeness.py  test_tavern_chats_import.py  test_turnstile.py  test_vertex_user_sa.py
rpg/tools/: __init__.py  contract_check.py
(+495 files in other folders)
