[project]
name = "rpg"
version = "1.3.5"
description = "RPG roleplay backend — FastAPI + Postgres + Anthropic/Vertex AI"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.111.0",
    "fastapi>=0.137.2",
    "fsspec>=2026.6.0",
    "google-auth>=2.55.0",
    "google-genai>=2.9.0",
    "httpx[http2]>=0.28",
    "openai>=2.43.0",
    "psycopg[binary]>=3.3",
    "psycopg-pool>=3.3",
    "python-dotenv>=1.2",
    "uvicorn>=0.49.0",
    "zhconv>=1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.18",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [
    ".venv",
    "claude_design_upload",
    "user_skills",
    "saves",
    "platform_data",
    "indexes",
    "modules",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort (import order)
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # bugbear
]
ignore = [
    "E501",  # line too long
    "B008",  # function call in default arg (FastAPI Depends pattern)
    "E402",  # module level import not at top (我们有合理用例)
]

[tool.mypy]
python_version = "3.11"
warn_unused_ignores = true
warn_redundant_casts = true
ignore_missing_imports = true
disable_error_code = [
    "import-untyped",
    "no-untyped-def",
    "no-untyped-call",
    "var-annotated",
    "no-any-return",
    "annotation-unchecked",
]
exclude = [
    "claude_design_upload",
    "user_skills",
    ".venv",
    "tests",
]

# DB-heavy files: psycopg3 uses dict_row factory (row_factory=dict_row in pool).
# Mypy infers fetchone()/fetchall() rows as tuple[Any,...] causing false-positive
# call-overload (row["key"]), index (row["key"]), attr-defined (.get()), union-attr.
# Suppress all 4 error codes together per module.
[[tool.mypy.overrides]]
module = [
    "app",
    "agents.acceptance_verifier",
    "agents.anchor_seed_agent",
    "agents.command_agent",
    "agents.extractor",
    "agents.gm.backends.anthropic",
    "agents.gm.backends.openai_compat",
    "agents.gm.backends.vertex",
    "agents.gm.master",
    "agents.phase_digest_agent",
    "agents.worldbook_agent",
    "chapter_splitter",
    "character_card_generator",
    "chat_pipeline",
    "console_assistant.confirmation",
    "console_assistant.llm_loop",
    "context_engine.loaders",
    "context_providers.script_phase_anticipation",
    "model_registry",
    "platform_app.api._deps",
    "platform_app.api.imports",
    "platform_app.api.me",
    "platform_app.api.saves",
    "platform_app.api.scripts",
    "platform_app.auth",
    "platform_app.branches._helpers",
    "platform_app.branches.activation",
    "platform_app.branches.deletion",
    "platform_app.branches.runtime",
    "platform_app.branches.tree_ops",
    "platform_app.cluster",
    "platform_app.db.pgvector",
    "platform_app.frontend_routes",
    "platform_app.import_pipeline",
    "platform_app.knowledge.character_cards",
    "platform_app.knowledge.retrieval",
    "platform_app.knowledge.session",
    "platform_app.runtime",
    "platform_app.save_io",
    "platform_app.script_import",
    "platform_app.settings",
    "platform_app.tavern_cards",
    "platform_app.usage",
    "platform_app.user_cards",
    "platform_app.user_credentials",
    "platform_app.workspace",
    "retrieval",
    "routes.rules",
    "routes.timeline",
    "save_phase_manager",
    "script_timeline",
    "scripts.aggregate_phase_digests",
    "scripts.bulk_backfill_phase_digests",
    "aggregate_phase_digests",
    "bulk_backfill_phase_digests",
    "state._mixins.apply_ops",
    "state._mixins.pending",
    "state._mixins.rules_gameplay",
    "state.core",
    "state_repository",
    "tools_dsl.command_tools_anchors",
    "tools_dsl.command_tools_creative",
    "tools_dsl.command_tools_misc",
    "tools_dsl.command_tools_phase",
    "tools_dsl.command_tools_saves",
    "tools_dsl.command_tools_register",
    "tools_dsl.command_tools_worldbook",
    "tools_dsl.set_parser",
    "tools_dsl.tool_registry",
    "context_engine.formatters",
    "platform_app.auth",
    "platform_app.knowledge.context_runs",
    "platform_app.knowledge.worldline",
    "platform_app.library",
    "platform_app.save_io",
    "platform_app.script_import",
    "platform_app.usage",
    "platform_app.user_cards",
    "routes.game",
    "routes.memory",
    "routes.models",
    "routes.permissions",
    "routes.worldline",
]
disable_error_code = ["call-overload", "index", "attr-defined", "union-attr", "arg-type", "operator", "dict-item", "list-item", "misc", "truthy-function"]
